hero height issue on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -14,6 +14,12 @@ body {
     height: 100%;
 }
 
+.hero-container {
+    text-align: center;
+    height: calc(100vh - 100px);
+    background: white;
+}
+
 .section {
     margin: 0 auto;
     max-width: 960px;
@@ -99,6 +105,12 @@ body {
 
     .mobile-hidden {
         display: none !important;
+    }
+
+    .hero-container {
+        text-align: center;
+        height: calc(100vh - 200px);
+        background: white;
     }
 }
 
